# exhibitmpv

./: .gitignore  CMakeLists.txt  Makefile  README.md  command.cpp  command.h  commander.cpp  commandsender.cpp  commandsender.h  file.txt  ipccommand.sh  main.cpp  meson.build  playevent.h  playlist.txt  schedule-lab.ipynb  schedule.cpp  schedule.csv  schedule.txt  schedule_with_time.txt  scheduler.cpp  scheduler.h  schedulereader.cpp  schedulereader.h  shiki.txt  shiki_with_time.txt  slack.cpp  slack.h  startup_mpv.sh  test.cpp  timer.cpp  timer.h  tokyo500-shunbun.txt  tokyo500-shunbun_test.txt  tokyo500-shunbun_test_with_time.txt  tokyo500-shunbun_with_time.txt
sches/: schedule.txt  scheduler_generator.ipynb  testschedule.txt  theaterCycle20230315.csv  theaterCycle2023031502.xlsx - Sheet1.csv
src/: .ExibitStream.c.swp  ExibitStream.c
